--- a/web/app/templates/application.hbs
+++ b/web/app/templates/application.hbs
@@ -1,3 +1,19 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<div class="page-container">
+    <nav id="sidebar">
+        <div class="sidebar-scroll">
+            <div class="sidebar-content">
+                <div class="side-header">
+                </div>
+                <div class="side-content">
+                </div>
+            </div>
+        </div>
+    </nav>
+    <header id="header-navbar">
+    </header>
+    <main id="main-container">
+        {{outlet}}
+    </main>
+    <footer id="page-footer">
+    </footer>
+</div>
