--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,20 +1,13 @@
 <div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+  <h2><%= gettext "Welcome to %{name}", name: "Sophia" %></h2>
+  <p class="lead">Sophia is an online reading handler that<br/>helps user enjoy read, understand, and memorize vocabulary.</p>
 </div>
 
 <div class="row marketing">
   <div class="col-lg-6">
     <h4>Resources</h4>
-    <ul>
       <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
+        <a href="https://github.com/iotalabs/sophia">Source</a>
       </li>
     </ul>
   </div>
@@ -23,13 +16,10 @@
     <h4>Help</h4>
     <ul>
       <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
+        <a href="https://github.com/iotalabs/sophia/issues">Issue</a>
       </li>
       <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
+        <a href="https://gitter.im/iotalabs/sophia">#Sophia on Gitter</a>
       </li>
     </ul>
   </div>
